--- a/app/src/main/res/menu/menu_preliminary_informations.xml
+++ b/app/src/main/res/menu/menu_preliminary_informations.xml
@@ -2,8 +2,8 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="bogradt.sztear.PreliminaryInformationsActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+    <item android:id="@+id/action_info"
+          android:title="@string/action_info"
           android:orderInCategory="100"
           app:showAsAction="never"/>
 </menu>
