--- a/app/src/main/res/layout/activity_preliminary_informations.xml
+++ b/app/src/main/res/layout/activity_preliminary_informations.xml
@@ -1,16 +1,66 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="bogradt.sztear.PreliminaryInformationsActivity">
-
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    >
+    <LinearLayout android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
+                  android:background="@drawable/background"
+                  android:orientation="vertical"
+                  tools:context=".MainActivity">
+        <ImageView style="@style/header"
+                   android:layout_height="200dp"
+            ></ImageView>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_title"
+            android:textSize="28sp"
+            android:fontFamily="@string/abc_action_mode_done"
+            android:textStyle="bold"
+            android:text="Dummy text for Title"
+            android:padding="15dp"/>
+        <TextView
+            android:textSize="22sp"
+            android:fontFamily="@string/abc_action_mode_done"
+            android:textStyle="bold"
+            android:text="Dummy text for long description. Dummy text for long description. Dummy text for long description."
+            android:padding="15dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/long_description"
+            android:background="@drawable/list_border"/>
+        <TextView
+            android:textSize="22sp"
+            android:fontFamily="@string/abc_action_mode_done"
+            android:textStyle="bold"
+            android:text="Download related image target"
+            android:padding="15dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/target_images"
+            android:background="@drawable/list_border"/>
+        <ImageView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:src="@drawable/preview"
+            android:padding="10dp"
+            android:cropToPadding="false"
+            android:baselineAlignBottom="false"
+            />
+    </LinearLayout>
+    <Button
+        android:textSize="28dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/start_button"
+        android:text="@string/start_button_label"
+        android:background="#ff1f1a17"
+        android:textColor="#ffece578"/>
 </RelativeLayout>
+
+
